<resources>
    <string name="app_name">Azur Lane Companion</string>
    <string name="search_button">Go</string>
    <string name="search_hint">Ship name</string>
    <string name="ship_image">ship_image</string>
    <string name="name">%1$s</string>
    <string name="construction">Construction: %1$s</string>
    <string name="rarity">Rarity: %1$s</string>
    <string name="ship_class">Class: %1$s</string>
    <string name="nationality">Nationality: %1$s</string>
    <string name="classification">Classification: %1$s</string>
    <string name="artist">Artist: %1$s</string>
    <string name="web">Web: %1$s</string>
    <string name="pixiv">Pixiv: %1$s</string>
    <string name="twitter">Twitter: %1$s</string>
    <string name="voice_actress">Voice Actress: %1$s</string>
    <string name="btn_search_description">search</string>
    <string name="logo_description">logo</string>
    <string name="skin_default_text">Skin</string>
    <string name="tab_general">General</string>
    <string name="tab_stats">Stats</string>
    <string name="soon">Soon™</string>
    <string name="ship_avatar">ship avatar</string>
    <string name="ship_name_example">Example</string>
    <string name="btn_download_description">download</string>
    <string name="btn_share_description">share</string>
    <string name="toolbar_title">Azur Lane</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toolbar_title_equipment">Equipment</string>
    <string name="toolbar_title_ships">Ships</string>
    <string name="dark_mode_setting">Dark mode</string>
    <string name="stat_health">Health: %1$s</string>
    <string name="stat_armor">Armor: %1$s</string>
    <string name="stat_reload">Reload: %1$s</string>
    <string name="stat_luck">Luck: %1$s</string>
    <string name="stat_firepower">Firepower: %1$s</string>
    <string name="stat_torpedo">Torpedo: %1$s</string>
    <string name="stat_evasion">Evasion: %1$s</string>
    <string name="stat_speed">Speed: %1$s</string>
    <string name="stat_anti_air">Anti-air: %1$s</string>
    <string name="stat_aviation">Aviation: %1$s</string>
    <string name="stat_oil">Oil consumption: %1$s</string>
    <string name="stat_accuracy">Accuracy (Hit): %1$s</string>
    <string name="stat_anti_sub_warfare">Anti-submarine warfare: %1$s</string>
    <string name="example">example</string>
    <string name="toolbar_title_nations">Nations</string>
    <string name="search_hint_nation">Nation name</string>
    <string name="nation_icon">nation icon</string>
</resources>
