<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.cesards.cropimageview.CropImageView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/ship_image"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            custom:crop="centerTop"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/name"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_construction_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/construction"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_rarity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/rarity"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_class"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/ship_class"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_nationality"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/nationality"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_classification"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/classification"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_row"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:listitem="@layout/skin" />

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/artist"
            android:textColor="@android:color/black"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_web"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/web"
            android:textColor="@android:color/black"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_pixiv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/pixiv"
            android:textColor="@android:color/black"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_twitter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/twitter"
            android:textColor="@android:color/black"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_voice_actress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/voice_actress"
            android:textColor="@android:color/black"
            android:textColorLink="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>