<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.cesards.cropimageview.CropImageView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_image"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/ship_image"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            custom:crop="centerTop"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textItemBackground"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/name"
            android:textColor="@color/text" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_construction_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/construction"
                        android:textColor="@color/text"
                        android:background="@drawable/border_bottom_end"/>

                    <TextView
                        android:id="@+id/tv_rarity"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/rarity"
                        android:textColor="@color/text"
                        android:background="@drawable/border_bottom_start"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_class"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/ship_class"
                        android:textColor="@color/text"
                        android:background="@drawable/border_top_end"/>

                    <TextView
                        android:id="@+id/tv_nationality"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/nationality"
                        android:textColor="@color/text"
                        android:background="@drawable/border_top_start"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_classification"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/classification"
                    android:textColor="@color/text"
                    android:background="@drawable/border_top"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_row"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:listitem="@layout/card_skin" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_artist"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/artist"
                        android:textColor="@color/text"
                        android:textColorLink="@color/colorPrimaryDark"
                        android:background="@drawable/border_bottom_end"/>

                    <TextView
                        android:id="@+id/tv_web"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/web"
                        android:textColor="@color/text"
                        android:textColorLink="@color/colorPrimaryDark"
                        android:background="@drawable/border_bottom_start"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/tv_pixiv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/pixiv"
                        android:textColor="@color/text"
                        android:textColorLink="@color/colorPrimaryDark"
                        android:background="@drawable/border_top_end"/>

                    <TextView
                        android:id="@+id/tv_twitter"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/twitter"
                        android:textColor="@color/text"
                        android:textColorLink="@color/colorPrimaryDark"
                        android:background="@drawable/border_top_start"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_voice_actress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/voice_actress"
                    android:textColor="@color/text"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:background="@drawable/border_top"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>